--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab-4: CSS Structure and Properties</title>
-    <link rel="stylesheet" href="Lab-4.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 
